# zengine

./: .gitignore  .gitmodules  CMakeLists.txt  MacOS.cmake  README.md  ZEngine-3.0.sln  generate-ios-project.sh  iOS.cmake
ZEngine-Core/: CMakeLists.txt  Core.i  Engine.cpp  Linux.cmake  MacOS.cmake  Windows.cmake  ZEngine-Core.vcxproj  ZEngine-Core.vcxproj.filters  iOS.PInvoke.cmake  iOS.cmake
ZEngine-Core/Assets/: Asset.cpp  Asset.h  AssetCatalog.cpp  AssetCatalog.h  AssetManager.cpp  AssetManager.h
ZEngine-Core/Audio/: AudioSystem.cpp  AudioSystem.h
ZEngine-Core/Component/: AudioSource.cpp  AudioSource.h  AudioSource.i  BoxCollider3D.cpp  BoxCollider3D.h  CSharpScriptComponent.cpp  CSharpScriptComponent.h  CSharpScriptComponent.i  Camera.cpp  Camera.h  Camera.i  CapsuleCollider3D.cpp  CapsuleCollider3D.h  Collider3D.cpp  Collider3D.h  Collider3D.i  Component.cpp  Component.h  Component.i  DynamicCollider3D.cpp  DynamicCollider3D.h  FreeCamera.cpp  FreeCamera.h  MeshCollider3D.cpp  MeshCollider3D.h  MeshRenderer.cpp  MeshRenderer.h  PlaneCollider3D.cpp  PlaneCollider3D.h  RigidBody3D.cpp  RigidBody3D.h  RigidBody3D.i  ScriptComponent.cpp  ScriptComponent.h  SphereCollider3D.cpp  SphereCollider3D.h  TestRenderer.cpp  TestRenderer.h  Transform.cpp  Transform.h  (+1 more)
ZEngine-Core/Display/: Display.cpp  Display.h
ZEngine-Core/GameLoop/: GameLoop.cpp  GameLoop.h
ZEngine-Core/ImmediateUI/: Container.cpp  Container.h  GUIDialog.cpp  GUIDialog.h  GUIElement.h  GUIImage.cpp  GUIImage.h  GUILibrary.cpp  GUILibrary.h  GUINameGenerator.cpp  GUINameGenerator.h  GUITextField.cpp  GUITextField.h  GUIWindow.cpp  GUIWindow.h  imgui-includes.h
ZEngine-Core/Input/: InputManager.cpp  InputManager.h  InputManager.i  InputTypes.cpp  InputTypes.h  InputTypes.i
ZEngine-Core/Map/: Map.cpp  Map.h  Map.i  MapManager.cpp  MapManager.h  MapManager.i
ZEngine-Core/Math/: AABB.h  Picker.cpp  Picker.h  Ray.cpp  Ray.h  Ray.i
ZEngine-Core/Misc/: Factory.cpp  Factory.h  Factory.i  OneShotSingleton.h  Singleton.h  Singleton.i  StringUtil.cpp  StringUtil.h
ZEngine-Core/Physics/: Physics3DSystem.cpp  Physics3DSystem.h  Physics3DSystem.i  PhysxUtils.h  Time.cpp  Time.h  Time.i
ZEngine-Core/Rendering/: BufferHandle.h  DynamicIndexBuffer.cpp  DynamicIndexBuffer.h  DynamicVertexBuffer.cpp  DynamicVertexBuffer.h  Graphics.cpp  Graphics.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  MaterialFactory.cpp  MaterialFactory.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  MetalLayerSetup.h  MetalLayerSetup.mm  Shader.cpp  Shader.h  StandardShaders.cpp  StandardShaders.h  Texture2D.cpp  Texture2D.h  VertexBuffer.cpp  VertexBuffer.h
ZEngine-Core/Scripting/: IScriptable.cpp  IScriptable.h  Script.cpp  Script.h  ScriptDemo.cpp  ScriptSystem.cpp  ScriptSystem.h
ZEngine-Core/Utilities/: Directory.cpp  Directory.h  DirectoryMacOS.cpp  DirectoryWin32.cpp  File.cpp  File.h  FutureHelpers.cpp  FutureHelpers.h  JsonHelpers.h
ZEngine-Editor/: AssetImporter.h  CMakeLists.txt  CameraExporter.h  ComponentExporter.cpp  ComponentExporter.h  CreateMapDialog.h  CreateMaterialDialog.cpp  CreateScriptDialog.cpp  CreateShaderDialog.cpp  CreateShaderDialog.h  DirectoryMacOS.cpp  DirectoryWin32.cpp  Editor.cpp  Editor.h  GUIImage.cpp  GUILibrary.cpp  GUILibrary.h  GUITextField.cpp  GUIWindow.cpp  GUIWindow.h  GameView.cpp  Inspector.cpp  InspectorWindow.cpp  LogWindow.h  MainMenuBar.cpp  MapBuilder.cpp  MapView.cpp  MapView.h  MaterialBuilder.cpp  MaterialEditor.h  MeshRendererInspector.cpp  MeshRendererInspector.h  NewFolderDialog.h  SceneGraphWindow.h  ShaderBuilder.cpp  ShaderEditor.cpp  ShaderEditor.h  ShaderImporter.cpp  TransformInspector.cpp  UnsavedDialog.h  (+6 more)
ZEngine-Editor-Web/native/: CMakeLists.txt  main.cpp  test.dylib
ZEngine-Editor-Web/src-tauri/: Cargo.toml  ProjectTemplate.Scripts.deps.json  ZEngine-Core.runtimeconfig.json  ZEngine-Editor-Web  ZEngine-Interop.deps.json  libZEngine-Editor-Web.dylib  tauri.conf.json
ZEngine-Editor/Builders/: MapBuilder.cpp  MapBuilder.h  MaterialBuilder.cpp  MaterialBuilder.h  ProjectBuilder.cpp  ProjectBuilder.h  ShaderBuilder.cpp  ShaderBuilder.h
ZEngine-Editor/Controllers/: Controller.h  MapController.cpp  MapController.h
ZEngine-Editor/Dialogs/: BrowserDialog.cpp  BrowserDialog.h  BuildStatusDialog.cpp  BuildStatusDialog.h  CreateMapDialog.cpp  CreateMapDialog.h  CreateMaterialDialog.cpp  CreateMaterialDialog.h  CreateProjectDialog.cpp  CreateProjectDialog.h  CreateScriptDialog.cpp  CreateScriptDialog.h  CreateShaderDialog.cpp  CreateShaderDialog.h  NewFolderDialog.cpp  NewFolderDialog.h  ProjectBrowserDialog.cpp  ProjectBrowserDialog.h  UnsavedDialog.cpp  UnsavedDialog.h
ZEngine-Editor/Exporters/: AudioSourceExporter.cpp  AudioSourceExporter.h  CameraExporter.cpp  CameraExporter.h  ComponentExporter.cpp  ComponentExporter.h  MapBuilder.cpp  MaterialBuilder.cpp  MeshRendererExporter.cpp  MeshRendererExporter.h  ScriptComponentExporter.cpp  ShaderBuilder.cpp  TransformExporter.cpp  TransformExporter.h
ZEngine-Editor/Gizmos/: BaseGizmoRenderer.h  BoxCollider3DGizmoRenderer.cpp  BoxCollider3DGizmoRenderer.h  CapsuleCollider3DGizmoRenderer.cpp  CapsuleCollider3DGizmoRenderer.h  GizmoSystem.cpp  GizmoSystem.h  SphereCollider3DGizmoRenderer.cpp  SphereCollider3DGizmoRenderer.h
ZEngine-Editor/Inspectors/: BoxCollider3DInspector.cpp  BoxCollider3DInspector.h  CameraInspector.cpp  CameraInspector.h  CapsuleCollider3DInspector.cpp  CapsuleCollider3DInspector.h  Inspector.cpp  Inspector.h  MeshRendererInspector.cpp  MeshRendererInspector.h  RigidBody3DInspector.cpp  RigidBody3DInspector.h  SphereCollider3DInspector.cpp  SphereCollider3DInspector.h  TransformInspector.cpp  TransformInspector.h
ZEngine-Editor/MapView/: MapViewPicker.cpp  MapViewPicker.h
ZEngine-Editor/Menus/: MainMenuBar.cpp  MainMenuBar.h
ZEngine-Editor/Popups/: AddComponentPopup.cpp  (+2 more)
ZEngine-Player/: CMakeLists.txt  MacOS.cmake  Windows.cmake  ZEngine-Player  ZEngine-Player.vcxproj  catalog.zengine  fs_pbr_direct.sc.mac  iOS.cmake  main.cpp  test_map.map  test_map.map.back
(+383 files in other folders)
